// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example files Should process examples/async-batch-iterator.ts: examples/async-batch-iterator.ts 1`] = `
"[ { product: 'Sofa' }, { product: 'Chair' } ]
[ { product: 'Table' } ]
"
`;

exports[`Example files Should process examples/async-iterator.ts: examples/async-iterator.ts 1`] = `
"{ product: 'Sofa' }
{ product: 'Chair' }
{ product: 'Table' }
"
`;

exports[`Example files Should process examples/async-iterator-mapped.ts: examples/async-iterator-mapped.ts 1`] = `
"{ product: 'Sofa', productLength: 4, productLengthSquare: 16 }
{ product: 'Chair', productLength: 5, productLengthSquare: 25 }
{ product: 'Table', productLength: 5, productLengthSquare: 25 }
"
`;

exports[`Example files Should process examples/each-batch.ts: examples/each-batch.ts 1`] = `
"[ { product: 'Sofa' }, { product: 'Chair' } ]
[ { product: 'Table' } ]
"
`;

exports[`Example files Should process examples/stream.ts: examples/stream.ts 1`] = `
"{ product: 'Sofa' }
{ product: 'Chair' }
{ product: 'Table' }
Done
"
`;
